--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BASE_URL=/api/v1
-DB_URL=mongodb+srv://Oreby:24WVgMXWpMbWG7eF@cluster0.biywf.mongodb.net/oreby?retryWrites=true&w=majority
+DB_URL=mongodb+srv://oreby:FtMS03iwMYcWBs36@cluster0.biywf.mongodb.net/oreby?retryWrites=true&w=majority
