--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BASE_URL=/api/v1
-DB_URL=mongodb+srv://backend-test:QjfvnZJD7OihaJny@cluster0.biywf.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://backend-test:QjfvnZJD7OihaJny@cluster0.biywf.mongodb.net/oreby?retryWrites=true&w=majority
 
