--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 BASE_URL=/api/v1
-DB_URL=mongodb+srv://backend-test:QjfvnZJD7OihaJny@cluster0.biywf.mongodb.net/oreby?retryWrites=true&w=majority
-
+DB_URL=mongodb+srv://oreby:OSkMLIEw3zcwmxUy@cluster0.biywf.mongodb.net/mern2103?retryWrites=true&w=majority
