--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BASE_URL=/api/v1
-DB_URL=mongodb+srv://oreby:OSkMLIEw3zcwmxUy@cluster0.biywf.mongodb.net/mern2103?retryWrites=true&w=majority
+DB_URL=mongodb+srv://Delowar:j7wnjrMH1W2TE1bN@cluster0.srkryjt.mongodb.net/?retryWrites=true&w=majority
