--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BASE_URL=/api/v1
 DB_URL=mongodb+srv://Delowar:j7wnjrMH1W2TE1bN@cluster0.srkryjt.mongodb.net/mern?retryWrites=true&w=majority
+EMAIL=delowarhosen154@gmail.com
