--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,6 +19,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.0",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "number-generator": "^4.0.6"
   }
 }
