--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BASE_URL=/api/v1
-DB_URL=mongodb+srv://Delowar:j7wnjrMH1W2TE1bN@cluster0.srkryjt.mongodb.net/mern?retryWrites=true&w=majority
+DB_URL=mongodb+srv://testBackend:testBackend@cluster0.biywf.mongodb.net/backendApi
 EMAIL=delowarhosen154@gmail.com
 
-//renderLiveLink=https://backend-er1a.onrender.com/
+# renderLiveLink=https://backend-er1a.onrender.com/
