--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BASE_URL=/api/v1
 DB_URL=mongodb+srv://testBackend:testBackend@cluster0.biywf.mongodb.net/backendApi
 EMAIL=delowarhosen154@gmail.com
+MERCHANT_SECRET_KEY=X3W5HvATe6apZuyUKxBJs9k3tMGuwXt7
 
 # renderLiveLink=https://backend-er1a.onrender.com/
